--- a/tests/testCorrectness.ipynb
+++ b/tests/testCorrectness.ipynb
@@ -2,9 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -22,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -87,45 +93,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = tf.zeros([4,384,512,3], tf.float32)"
+    "x = tf.zeros([1,240,320,3], tf.float32)\n",
+    "weight_path = '../numpy_weights/weights_prepost.npy'\n",
+    "trainedWeights = np.load(weight_path, allow_pickle=True)[()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 118,
+   "metadata": {
+    "tags": [
+     "outputPrepend"
+    ]
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "weight loaded\nModel created\nWARNING:tensorflow:From /home/sniper/programs/AIenv3/lib/python3.6/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1635: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\nInstructions for updating:\nIf using Keras pass *_constraint arguments to layers.\nloading weights\n[[230.06601 228.04631 227.75038 ... 235.12692 224.73686 230.45412]\n [232.04471 227.8006  228.93391 ... 226.5377  222.36766 226.4358 ]\n [235.84232 232.5685  233.39561 ... 223.662   221.49083 221.60693]\n ...\n [229.39291 228.05417 225.92091 ... 218.15771 217.13875 218.98273]\n [228.36572 225.05762 225.30272 ... 212.72368 213.78432 215.3887 ]\n [223.94109 222.36055 220.91011 ... 214.19508 213.496   217.79015]]\n"
+     "text": "weight loaded\n32 (32,) 3/0/0/1/\n32 (32,) 3/0/0/1/\n32 (32,) 3/0/0/1/\n32 (32,) 3/0/0/2/\n32 (32,) 3/0/0/2/\n32 (32,) 3/0/0/2/\n32 (32,) 3/0/0/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/2/\n32 (32,) 3/0/0/3/0/0/2/\n32 (32,) 3/0/0/3/0/0/2/\n32 (32,) 3/0/0/3/0/0/3/0/0/0/\n32 (32,) 3/0/0/3/0/0/3/0/0/0/\n32 (32,) 3/0/0/3/0/0/3/0/0/0/\n64 (64,) 3/0/0/3/0/0/3/0/0/1/\n64 (64,) 3/0/0/3/0/0/3/0/0/1/\n64 (64,) 3/0/0/3/0/0/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/0/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/0/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/0/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/3/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/3/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/3/\n32 (32,) 3/0/0/3/0/0/3/0/1/4/\n32 (32,) 3/0/0/3/0/0/3/0/1/4/\n32 (32,) 3/0/0/3/0/0/3/0/1/4/\n64 (64,) 3/0/0/3/0/0/3/0/1/5/\n64 (64,) 3/0/0/3/0/0/3/0/1/5/\n64 (64,) 3/0/0/3/0/0/3/0/1/5/\n32 (32,) 3/0/0/3/0/0/4/\n32 (32,) 3/0/0/3/0/0/4/\n32 (32,) 3/0/0/3/0/0/4/\n32 (32,) 3/0/0/3/0/0/5/\n32 (32,) 3/0/0/3/0/0/5/\n32 (32,) 3/0/0/3/0/0/5/\n32 (32,) 3/0/0/3/0/1/0/\n32 (32,) 3/0/0/3/0/1/0/\n32 (32,) 3/0/0/3/0/1/0/\n64 (64,) 3/0/0/3/0/1/1/\n64 (64,) 3/0/0/3/0/1/1/\n64 (64,) 3/0/0/3/0/1/1/\n64 (64,) 3/0/0/4/\n64 (64,) 3/0/0/4/\n64 (64,) 3/0/0/4/\n32 (32,) 3/0/0/5/\n32 (32,) 3/0/0/5/\n32 (32,) 3/0/0/5/\n64 (64,) 3/0/1/0/\n64 (64,) 3/0/1/0/\n64 (64,) 3/0/1/0/\nModel created\n"
     }
    ],
    "source": [
     "if gpus:\n",
-    "    weight_path = '../numpy_weights/weights.pkl.npy'\n",
-    "    #trainedWeights = np.load('weights.pkl.npy',allow_pickle=True)[()]\n",
     "    print(\"weight loaded\")\n",
-    "    H = Hourglass(training=False,weight_path=weight_path,normalize=True)\n",
+    "    H = Hourglass(training=False, weightsDictionary=trainedWeights, normalize=True)\n",
     "    print(\"Model created\")\n",
     "    H.trainable = False\n",
     "    output = H.predict_on_batch(img)\n",
     "    #print(\"output Finished\",output)\n",
     "    output = np.array(output, dtype=np.float32)*255\n",
-    "    print(output)\n",
+    "    # print(output)\n",
     "    io.imsave(out_path, np.array(output, dtype=np.uint8))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
+   "metadata": {
+    "tags": [
+     "outputPrepend"
+    ]
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0/conv2d/bias\n0/conv2d/kernel\n3/0/0/1/conv2d/bias\n3/0/0/1/conv2d/kernel\n3/0/0/1/conv2d_1/bias\n3/0/0/1/conv2d_1/kernel\n3/0/0/1/conv2d_2/bias\n3/0/0/1/conv2d_2/kernel\n3/0/0/1/conv2d_3/bias\n3/0/0/1/conv2d_3/kernel\n3/0/0/1/conv2d_4/bias\n3/0/0/1/conv2d_4/kernel\n3/0/0/1/conv2d_5/bias\n3/0/0/1/conv2d_5/kernel\n3/0/0/1/conv2d_6/bias\n3/0/0/1/conv2d_6/kernel\n3/0/0/2/conv2d/bias\n3/0/0/2/conv2d/kernel\n3/0/0/2/conv2d_1/bias\n3/0/0/2/conv2d_1/kernel\n3/0/0/2/conv2d_2/bias\n3/0/0/2/conv2d_2/kernel\n3/0/0/2/conv2d_3/bias\n3/0/0/2/conv2d_3/kernel\n3/0/0/2/conv2d_4/bias\n3/0/0/2/conv2d_4/kernel\n3/0/0/2/conv2d_5/bias\n3/0/0/2/conv2d_5/kernel\n3/0/0/2/conv2d_6/bias\n3/0/0/2/conv2d_6/kernel\n3/0/0/3/0/0/1/conv2d/bias\n3/0/0/3/0/0/1/conv2d/kernel\n3/0/0/3/0/0/1/conv2d_1/bias\n3/0/0/3/0/0/1/conv2d_1/kernel\n3/0/0/3/0/0/1/conv2d_2/bias\n3/0/0/3/0/0/1/conv2d_2/kernel\n3/0/0/3/0/0/1/conv2d_3/bias\n3/0/0/3/0/0/1/conv2d_3/kernel\n3/0/0/3/0/0/1/conv2d_4/bias\n3/0/0/3/0/0/1/conv2d_4/kernel\n3/0/0/3/0/0/1/conv2d_5/bias\n3/0/0/3/0/0/1/conv2d_5/kernel\n3/0/0/3/0/0/1/conv2d_6/bias\n3/0/0/3/0/0/1/conv2d_6/kernel\n3/0/0/3/0/0/2/conv2d/bias\n3/0/0/3/0/0/2/conv2d/kernel\n3/0/0/3/0/0/2/conv2d_1/bias\n3/0/0/3/0/0/2/conv2d_1/kernel\n3/0/0/3/0/0/2/conv2d_2/bias\n3/0/0/3/0/0/2/conv2d_2/kernel\n3/0/0/3/0/0/2/conv2d_3/bias\n3/0/0/3/0/0/2/conv2d_3/kernel\n3/0/0/3/0/0/2/conv2d_4/bias\n3/0/0/3/0/0/2/conv2d_4/kernel\n3/0/0/3/0/0/2/conv2d_5/bias\n3/0/0/3/0/0/2/conv2d_5/kernel\n3/0/0/3/0/0/2/conv2d_6/bias\n3/0/0/3/0/0/2/conv2d_6/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d/bias\n3/0/0/3/0/0/3/0/0/0/conv2d/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_1/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_1/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_2/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_2/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_3/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_3/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_4/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_4/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_5/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_5/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_6/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_6/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d/bias\n3/0/0/3/0/0/3/0/0/1/conv2d/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_1/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_1/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_2/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_2/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_3/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_3/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_4/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_4/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_5/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_5/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_6/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d/bias\n3/0/0/3/0/0/3/0/1/1/conv2d/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d/bias\n3/0/0/3/0/0/3/0/1/2/conv2d/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d/bias\n3/0/0/3/0/0/3/0/1/4/conv2d/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d/bias\n3/0/0/3/0/0/3/0/1/5/conv2d/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_6/kernel\n3/0/0/3/0/0/4/conv2d/bias\n3/0/0/3/0/0/4/conv2d/kernel\n3/0/0/3/0/0/4/conv2d_1/bias\n3/0/0/3/0/0/4/conv2d_1/kernel\n3/0/0/3/0/0/4/conv2d_2/bias\n3/0/0/3/0/0/4/conv2d_2/kernel\n3/0/0/3/0/0/4/conv2d_3/bias\n3/0/0/3/0/0/4/conv2d_3/kernel\n3/0/0/3/0/0/4/conv2d_4/bias\n3/0/0/3/0/0/4/conv2d_4/kernel\n3/0/0/3/0/0/4/conv2d_5/bias\n3/0/0/3/0/0/4/conv2d_5/kernel\n3/0/0/3/0/0/4/conv2d_6/bias\n3/0/0/3/0/0/4/conv2d_6/kernel\n3/0/0/3/0/0/5/conv2d/bias\n3/0/0/3/0/0/5/conv2d/kernel\n3/0/0/3/0/0/5/conv2d_1/bias\n3/0/0/3/0/0/5/conv2d_1/kernel\n3/0/0/3/0/0/5/conv2d_2/bias\n3/0/0/3/0/0/5/conv2d_2/kernel\n3/0/0/3/0/0/5/conv2d_3/bias\n3/0/0/3/0/0/5/conv2d_3/kernel\n3/0/0/3/0/0/5/conv2d_4/bias\n3/0/0/3/0/0/5/conv2d_4/kernel\n3/0/0/3/0/0/5/conv2d_5/bias\n3/0/0/3/0/0/5/conv2d_5/kernel\n3/0/0/3/0/0/5/conv2d_6/bias\n3/0/0/3/0/0/5/conv2d_6/kernel\n3/0/0/3/0/1/0/conv2d/bias\n3/0/0/3/0/1/0/conv2d/kernel\n3/0/0/3/0/1/0/conv2d_1/bias\n3/0/0/3/0/1/0/conv2d_1/kernel\n3/0/0/3/0/1/0/conv2d_2/bias\n3/0/0/3/0/1/0/conv2d_2/kernel\n3/0/0/3/0/1/0/conv2d_3/bias\n3/0/0/3/0/1/0/conv2d_3/kernel\n3/0/0/3/0/1/0/conv2d_4/bias\n3/0/0/3/0/1/0/conv2d_4/kernel\n3/0/0/3/0/1/0/conv2d_5/bias\n3/0/0/3/0/1/0/conv2d_5/kernel\n3/0/0/3/0/1/0/conv2d_6/bias\n3/0/0/3/0/1/0/conv2d_6/kernel\n3/0/0/3/0/1/1/conv2d/bias\n3/0/0/3/0/1/1/conv2d/kernel\n3/0/0/3/0/1/1/conv2d_1/bias\n3/0/0/3/0/1/1/conv2d_1/kernel\n3/0/0/3/0/1/1/conv2d_2/bias\n3/0/0/3/0/1/1/conv2d_2/kernel\n3/0/0/3/0/1/1/conv2d_3/bias\n3/0/0/3/0/1/1/conv2d_3/kernel\n3/0/0/3/0/1/1/conv2d_4/bias\n3/0/0/3/0/1/1/conv2d_4/kernel\n3/0/0/3/0/1/1/conv2d_5/bias\n3/0/0/3/0/1/1/conv2d_5/kernel\n3/0/0/3/0/1/1/conv2d_6/bias\n3/0/0/3/0/1/1/conv2d_6/kernel\n3/0/0/4/conv2d/bias\n3/0/0/4/conv2d/kernel\n3/0/0/4/conv2d_1/bias\n3/0/0/4/conv2d_1/kernel\n3/0/0/4/conv2d_2/bias\n3/0/0/4/conv2d_2/kernel\n3/0/0/4/conv2d_3/bias\n3/0/0/4/conv2d_3/kernel\n3/0/0/4/conv2d_4/bias\n3/0/0/4/conv2d_4/kernel\n3/0/0/4/conv2d_5/bias\n3/0/0/4/conv2d_5/kernel\n3/0/0/4/conv2d_6/bias\n3/0/0/4/conv2d_6/kernel\n3/0/0/5/conv2d/bias\n3/0/0/5/conv2d/kernel\n3/0/0/5/conv2d_1/bias\n3/0/0/5/conv2d_1/kernel\n3/0/0/5/conv2d_2/bias\n3/0/0/5/conv2d_2/kernel\n3/0/0/5/conv2d_3/bias\n3/0/0/5/conv2d_3/kernel\n3/0/0/5/conv2d_4/bias\n3/0/0/5/conv2d_4/kernel\n3/0/0/5/conv2d_5/bias\n3/0/0/5/conv2d_5/kernel\n3/0/0/5/conv2d_6/bias\n3/0/0/5/conv2d_6/kernel\n3/0/1/0/conv2d/bias\n3/0/1/0/conv2d/kernel\n3/0/1/0/conv2d_1/bias\n3/0/1/0/conv2d_1/kernel\n3/0/1/0/conv2d_2/bias\n3/0/1/0/conv2d_2/kernel\n3/0/1/0/conv2d_3/bias\n3/0/1/0/conv2d_3/kernel\n3/0/1/0/conv2d_4/bias\n3/0/1/0/conv2d_4/kernel\n3/0/1/0/conv2d_5/bias\n3/0/1/0/conv2d_5/kernel\n3/0/1/0/conv2d_6/bias\n3/0/1/0/conv2d_6/kernel\n4/conv2d/bias\n4/conv2d/kernel\n"
+    }
+   ],
+   "source": [
+    "K = trainedWeights.keys()\n",
+    "# print(trainedWeights['0/conv2d/kernel'])\n",
+    "for k in K:\n",
+    "    if \"conv2d\" in k:\n",
+    "        print(k)\n",
+    "# print(K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#trainedWeights2 = np.load('../weights.pkl.npy', allow_pickle=True)[()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "tags": [
+     "outputPrepend"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#K = trainedWeights2.keys()\n",
+    "#print(K)"
+   ]
   }
  ],
  "metadata": {
