--- a/tests/testCorrectness.ipynb
+++ b/tests/testCorrectness.ipynb
@@ -2,15 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -28,17 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path = '../demo.jpg'\n",
-    "out_path = '../output_colored.png'"
+    "img_path = '../doc/demo.jpg'\n",
+    "out_path = '../doc/output_colored.png'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,31 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[[19387 18288 18064 ... 17100 17920 19150]\n [18199 18022 17715 ... 16047 16784 17208]\n [17981 17854 17523 ... 15647 16211 16806]\n ...\n [52257 53264 53628 ... 58444 58859 57767]\n [52527 53803 54187 ... 58722 58947 57918]\n [49096 53721 54102 ... 58496 58532 52894]]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sample_out = io.imread('../hell0_demo_tf_320x240_prepost.png')\n",
+    "sample_out = io.imread('../doc/hell0_demo_tf_320x240_prepost.png')\n",
     "print(sample_out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Gpus are  [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gpus= tf.config.experimental.list_physical_devices('GPU')\n",
     "tf.config.experimental.set_memory_growth(gpus[0], True)\n",
@@ -93,30 +75,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = tf.zeros([1,240,320,3], tf.float32)\n",
-    "weight_path = '../numpy_weights/weights_prepost.npy'\n",
+    "weight_path = '../megadepth_model_fuse_bn_name/numpy_weights/weights_prepost.npy'\n",
     "trainedWeights = np.load(weight_path, allow_pickle=True)[()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "outputPrepend"
     ]
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "weight loaded\n32 (32,) 3/0/0/1/\n32 (32,) 3/0/0/1/\n32 (32,) 3/0/0/1/\n32 (32,) 3/0/0/2/\n32 (32,) 3/0/0/2/\n32 (32,) 3/0/0/2/\n32 (32,) 3/0/0/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/2/\n32 (32,) 3/0/0/3/0/0/2/\n32 (32,) 3/0/0/3/0/0/2/\n32 (32,) 3/0/0/3/0/0/3/0/0/0/\n32 (32,) 3/0/0/3/0/0/3/0/0/0/\n32 (32,) 3/0/0/3/0/0/3/0/0/0/\n64 (64,) 3/0/0/3/0/0/3/0/0/1/\n64 (64,) 3/0/0/3/0/0/3/0/0/1/\n64 (64,) 3/0/0/3/0/0/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/0/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/0/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/0/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/0/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/1/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/2/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/3/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/3/\n32 (32,) 3/0/0/3/0/0/3/0/1/3/0/1/3/\n32 (32,) 3/0/0/3/0/0/3/0/1/4/\n32 (32,) 3/0/0/3/0/0/3/0/1/4/\n32 (32,) 3/0/0/3/0/0/3/0/1/4/\n64 (64,) 3/0/0/3/0/0/3/0/1/5/\n64 (64,) 3/0/0/3/0/0/3/0/1/5/\n64 (64,) 3/0/0/3/0/0/3/0/1/5/\n32 (32,) 3/0/0/3/0/0/4/\n32 (32,) 3/0/0/3/0/0/4/\n32 (32,) 3/0/0/3/0/0/4/\n32 (32,) 3/0/0/3/0/0/5/\n32 (32,) 3/0/0/3/0/0/5/\n32 (32,) 3/0/0/3/0/0/5/\n32 (32,) 3/0/0/3/0/1/0/\n32 (32,) 3/0/0/3/0/1/0/\n32 (32,) 3/0/0/3/0/1/0/\n64 (64,) 3/0/0/3/0/1/1/\n64 (64,) 3/0/0/3/0/1/1/\n64 (64,) 3/0/0/3/0/1/1/\n64 (64,) 3/0/0/4/\n64 (64,) 3/0/0/4/\n64 (64,) 3/0/0/4/\n32 (32,) 3/0/0/5/\n32 (32,) 3/0/0/5/\n32 (32,) 3/0/0/5/\n64 (64,) 3/0/1/0/\n64 (64,) 3/0/1/0/\n64 (64,) 3/0/1/0/\nModel created\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if gpus:\n",
     "    print(\"weight loaded\")\n",
@@ -132,19 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "outputPrepend"
     ]
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "0/conv2d/bias\n0/conv2d/kernel\n3/0/0/1/conv2d/bias\n3/0/0/1/conv2d/kernel\n3/0/0/1/conv2d_1/bias\n3/0/0/1/conv2d_1/kernel\n3/0/0/1/conv2d_2/bias\n3/0/0/1/conv2d_2/kernel\n3/0/0/1/conv2d_3/bias\n3/0/0/1/conv2d_3/kernel\n3/0/0/1/conv2d_4/bias\n3/0/0/1/conv2d_4/kernel\n3/0/0/1/conv2d_5/bias\n3/0/0/1/conv2d_5/kernel\n3/0/0/1/conv2d_6/bias\n3/0/0/1/conv2d_6/kernel\n3/0/0/2/conv2d/bias\n3/0/0/2/conv2d/kernel\n3/0/0/2/conv2d_1/bias\n3/0/0/2/conv2d_1/kernel\n3/0/0/2/conv2d_2/bias\n3/0/0/2/conv2d_2/kernel\n3/0/0/2/conv2d_3/bias\n3/0/0/2/conv2d_3/kernel\n3/0/0/2/conv2d_4/bias\n3/0/0/2/conv2d_4/kernel\n3/0/0/2/conv2d_5/bias\n3/0/0/2/conv2d_5/kernel\n3/0/0/2/conv2d_6/bias\n3/0/0/2/conv2d_6/kernel\n3/0/0/3/0/0/1/conv2d/bias\n3/0/0/3/0/0/1/conv2d/kernel\n3/0/0/3/0/0/1/conv2d_1/bias\n3/0/0/3/0/0/1/conv2d_1/kernel\n3/0/0/3/0/0/1/conv2d_2/bias\n3/0/0/3/0/0/1/conv2d_2/kernel\n3/0/0/3/0/0/1/conv2d_3/bias\n3/0/0/3/0/0/1/conv2d_3/kernel\n3/0/0/3/0/0/1/conv2d_4/bias\n3/0/0/3/0/0/1/conv2d_4/kernel\n3/0/0/3/0/0/1/conv2d_5/bias\n3/0/0/3/0/0/1/conv2d_5/kernel\n3/0/0/3/0/0/1/conv2d_6/bias\n3/0/0/3/0/0/1/conv2d_6/kernel\n3/0/0/3/0/0/2/conv2d/bias\n3/0/0/3/0/0/2/conv2d/kernel\n3/0/0/3/0/0/2/conv2d_1/bias\n3/0/0/3/0/0/2/conv2d_1/kernel\n3/0/0/3/0/0/2/conv2d_2/bias\n3/0/0/3/0/0/2/conv2d_2/kernel\n3/0/0/3/0/0/2/conv2d_3/bias\n3/0/0/3/0/0/2/conv2d_3/kernel\n3/0/0/3/0/0/2/conv2d_4/bias\n3/0/0/3/0/0/2/conv2d_4/kernel\n3/0/0/3/0/0/2/conv2d_5/bias\n3/0/0/3/0/0/2/conv2d_5/kernel\n3/0/0/3/0/0/2/conv2d_6/bias\n3/0/0/3/0/0/2/conv2d_6/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d/bias\n3/0/0/3/0/0/3/0/0/0/conv2d/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_1/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_1/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_2/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_2/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_3/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_3/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_4/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_4/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_5/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_5/kernel\n3/0/0/3/0/0/3/0/0/0/conv2d_6/bias\n3/0/0/3/0/0/3/0/0/0/conv2d_6/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d/bias\n3/0/0/3/0/0/3/0/0/1/conv2d/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_1/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_1/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_2/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_2/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_3/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_3/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_4/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_4/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_5/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_5/kernel\n3/0/0/3/0/0/3/0/0/1/conv2d_6/bias\n3/0/0/3/0/0/3/0/0/1/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d/bias\n3/0/0/3/0/0/3/0/1/1/conv2d/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/1/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/1/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d/bias\n3/0/0/3/0/0/3/0/1/2/conv2d/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/2/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/2/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/3/0/0/0/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/3/0/0/1/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/3/0/1/1/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/3/0/1/2/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/3/0/1/3/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d/bias\n3/0/0/3/0/0/3/0/1/4/conv2d/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/4/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/4/conv2d_6/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d/bias\n3/0/0/3/0/0/3/0/1/5/conv2d/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_1/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_1/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_2/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_2/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_3/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_3/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_4/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_4/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_5/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_5/kernel\n3/0/0/3/0/0/3/0/1/5/conv2d_6/bias\n3/0/0/3/0/0/3/0/1/5/conv2d_6/kernel\n3/0/0/3/0/0/4/conv2d/bias\n3/0/0/3/0/0/4/conv2d/kernel\n3/0/0/3/0/0/4/conv2d_1/bias\n3/0/0/3/0/0/4/conv2d_1/kernel\n3/0/0/3/0/0/4/conv2d_2/bias\n3/0/0/3/0/0/4/conv2d_2/kernel\n3/0/0/3/0/0/4/conv2d_3/bias\n3/0/0/3/0/0/4/conv2d_3/kernel\n3/0/0/3/0/0/4/conv2d_4/bias\n3/0/0/3/0/0/4/conv2d_4/kernel\n3/0/0/3/0/0/4/conv2d_5/bias\n3/0/0/3/0/0/4/conv2d_5/kernel\n3/0/0/3/0/0/4/conv2d_6/bias\n3/0/0/3/0/0/4/conv2d_6/kernel\n3/0/0/3/0/0/5/conv2d/bias\n3/0/0/3/0/0/5/conv2d/kernel\n3/0/0/3/0/0/5/conv2d_1/bias\n3/0/0/3/0/0/5/conv2d_1/kernel\n3/0/0/3/0/0/5/conv2d_2/bias\n3/0/0/3/0/0/5/conv2d_2/kernel\n3/0/0/3/0/0/5/conv2d_3/bias\n3/0/0/3/0/0/5/conv2d_3/kernel\n3/0/0/3/0/0/5/conv2d_4/bias\n3/0/0/3/0/0/5/conv2d_4/kernel\n3/0/0/3/0/0/5/conv2d_5/bias\n3/0/0/3/0/0/5/conv2d_5/kernel\n3/0/0/3/0/0/5/conv2d_6/bias\n3/0/0/3/0/0/5/conv2d_6/kernel\n3/0/0/3/0/1/0/conv2d/bias\n3/0/0/3/0/1/0/conv2d/kernel\n3/0/0/3/0/1/0/conv2d_1/bias\n3/0/0/3/0/1/0/conv2d_1/kernel\n3/0/0/3/0/1/0/conv2d_2/bias\n3/0/0/3/0/1/0/conv2d_2/kernel\n3/0/0/3/0/1/0/conv2d_3/bias\n3/0/0/3/0/1/0/conv2d_3/kernel\n3/0/0/3/0/1/0/conv2d_4/bias\n3/0/0/3/0/1/0/conv2d_4/kernel\n3/0/0/3/0/1/0/conv2d_5/bias\n3/0/0/3/0/1/0/conv2d_5/kernel\n3/0/0/3/0/1/0/conv2d_6/bias\n3/0/0/3/0/1/0/conv2d_6/kernel\n3/0/0/3/0/1/1/conv2d/bias\n3/0/0/3/0/1/1/conv2d/kernel\n3/0/0/3/0/1/1/conv2d_1/bias\n3/0/0/3/0/1/1/conv2d_1/kernel\n3/0/0/3/0/1/1/conv2d_2/bias\n3/0/0/3/0/1/1/conv2d_2/kernel\n3/0/0/3/0/1/1/conv2d_3/bias\n3/0/0/3/0/1/1/conv2d_3/kernel\n3/0/0/3/0/1/1/conv2d_4/bias\n3/0/0/3/0/1/1/conv2d_4/kernel\n3/0/0/3/0/1/1/conv2d_5/bias\n3/0/0/3/0/1/1/conv2d_5/kernel\n3/0/0/3/0/1/1/conv2d_6/bias\n3/0/0/3/0/1/1/conv2d_6/kernel\n3/0/0/4/conv2d/bias\n3/0/0/4/conv2d/kernel\n3/0/0/4/conv2d_1/bias\n3/0/0/4/conv2d_1/kernel\n3/0/0/4/conv2d_2/bias\n3/0/0/4/conv2d_2/kernel\n3/0/0/4/conv2d_3/bias\n3/0/0/4/conv2d_3/kernel\n3/0/0/4/conv2d_4/bias\n3/0/0/4/conv2d_4/kernel\n3/0/0/4/conv2d_5/bias\n3/0/0/4/conv2d_5/kernel\n3/0/0/4/conv2d_6/bias\n3/0/0/4/conv2d_6/kernel\n3/0/0/5/conv2d/bias\n3/0/0/5/conv2d/kernel\n3/0/0/5/conv2d_1/bias\n3/0/0/5/conv2d_1/kernel\n3/0/0/5/conv2d_2/bias\n3/0/0/5/conv2d_2/kernel\n3/0/0/5/conv2d_3/bias\n3/0/0/5/conv2d_3/kernel\n3/0/0/5/conv2d_4/bias\n3/0/0/5/conv2d_4/kernel\n3/0/0/5/conv2d_5/bias\n3/0/0/5/conv2d_5/kernel\n3/0/0/5/conv2d_6/bias\n3/0/0/5/conv2d_6/kernel\n3/0/1/0/conv2d/bias\n3/0/1/0/conv2d/kernel\n3/0/1/0/conv2d_1/bias\n3/0/1/0/conv2d_1/kernel\n3/0/1/0/conv2d_2/bias\n3/0/1/0/conv2d_2/kernel\n3/0/1/0/conv2d_3/bias\n3/0/1/0/conv2d_3/kernel\n3/0/1/0/conv2d_4/bias\n3/0/1/0/conv2d_4/kernel\n3/0/1/0/conv2d_5/bias\n3/0/1/0/conv2d_5/kernel\n3/0/1/0/conv2d_6/bias\n3/0/1/0/conv2d_6/kernel\n4/conv2d/bias\n4/conv2d/kernel\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "K = trainedWeights.keys()\n",
     "# print(trainedWeights['0/conv2d/kernel'])\n",
@@ -156,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "outputPrepend"
