--- a/tests/testCorrectness.ipynb
+++ b/tests/testCorrectness.ipynb
@@ -96,14 +96,14 @@
    "source": [
     "if gpus:\n",
     "    print(\"weight loaded\")\n",
-    "    H = Hourglass(training=False, weightsDictionary=trainedWeights, normalize=True)\n",
+    "    H = Hourglass(training=False, weightsPath=weight_path, normalize=False)\n",
     "    print(\"Model created\")\n",
     "    H.trainable = False\n",
     "    output = H.predict_on_batch(img)\n",
     "    #print(\"output Finished\",output)\n",
-    "    output = np.array(output, dtype=np.float32)*255\n",
+    "    output = output*255\n",
     "    # print(output)\n",
-    "    io.imsave(out_path, np.array(output, dtype=np.uint8))"
+    "    io.imsave(out_path, output)"
    ]
   },
   {
